# airflow-toolkit

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: lint-and-test.yml  publish.yml
dags_examples/: dag_data_late.py  dag_filesystem_operator.py  dag_filesystem_to_db.py  dag_http_to_filesystem.py
demo/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml
demo/dags/: demo_deltalake.py  demo_filesystem_backends_v250.py  demo_http_v240.py  demo_iceberg.py  demo_jsonplaceholder.py  demo_new_formats.py  demo_notifications_callback.py  demo_notifications_task_pattern.py
demo/dbt/: profiles.yml
demo/dbt/jsonplaceholder/: dbt_project.yml
demo/dbt/jsonplaceholder/models/bronze/: _schema.yml  _sources.yml  bronze__albums.sql  bronze__comments.sql  bronze__posts.sql  bronze__todos.sql  bronze__users.sql
demo/dbt/jsonplaceholder/models/gold/: _schema.yml  gold__user_activity.sql
demo/dbt/jsonplaceholder/models/silver/: _schema.yml  silver__albums.sql  silver__comments.sql  silver__posts.sql  silver__todos.sql  silver__users.sql
demo/scripts/: init-dw.sh  setup_metabase.py  webhook_logger.py
src/airflow_toolkit/: _version.py  compression_utils.py  data_lake_facade.py  protocols.py  testing.py  types.py
src/airflow_toolkit/_compact/: airflow.py  airflow_shim.py
src/airflow_toolkit/filesystems/: filesystem_factory.py  filesystem_protocol.py
src/airflow_toolkit/filesystems/impl/: azure_databricks_volume_filesystem.py  azure_file_share_filesystem.py  blob_storage_filesystem.py  ftp_filesystem.py  google_cloud_storage_filesystem.py  google_drive_filesystem.py  local_filesystem.py  s3_filesystem.py  sftp_filesystem.py  sharepoint_filesystem.py
src/airflow_toolkit/notifications/: __init__.py  context.py
src/airflow_toolkit/notifications/channels/: discord.py  email.py  slack.py  teams.py
src/airflow_toolkit/notifications/slack/: webhook.py
src/airflow_toolkit/providers/: package.py
src/airflow_toolkit/providers/azure/hooks/: azure_databricks.py  azure_file_share.py
src/airflow_toolkit/providers/data_lake/operators/: data_lake.py
src/airflow_toolkit/providers/deltalake/: storage_options.py
src/airflow_toolkit/providers/deltalake/operators/: duckdb_to_deltalake.py  filesystem_to_database.py  filesystem_to_deltalake.py
src/airflow_toolkit/providers/deltalake/sensors/: filesystem_file.py
src/airflow_toolkit/providers/filesystem/: batch_reader.py  tasks.py
src/airflow_toolkit/providers/filesystem/operators/: auth.py  filesystem.py  http_to_filesystem.py
src/airflow_toolkit/providers/google/hooks/: drive.py
src/airflow_toolkit/providers/http_to_data_lake/operators/: http_to_data_lake.py
src/airflow_toolkit/providers/iceberg/operators/: filesystem_to_iceberg.py
src/airflow_toolkit/providers/microsoft/hooks/: sharepoint.py
src/airflow_toolkit/providers/warehouse/dialects/: base.py  databricks.py  snowflake.py
src/airflow_toolkit/providers/warehouse/operators/: filesystem_to_warehouse.py
src/airflow_tools/providers/deltalake/operators/: filesystem_to_database.py
tests/: conftest.py
tests/integration/: conftest.py  test_data_lake.py  test_filesystem_operators.py  test_filesystem_to_database.py  test_gcs_filesystem.py  test_http_to_data_lake.py  test_http_to_filesystem.py  test_library_installation.py  test_montel_api.py  test_sftp.py
tests/unit/: test_batch_reader_unit.py  test_compression.py  test_duckdb_to_deltalake.py  test_filesystem_factory.py  test_filesystem_operators_unit.py  test_filesystem_tasks.py  test_filesystem_to_database_formats.py  test_filesystem_to_database_unit.py  test_filesystem_to_deltalake_unit.py  test_filesystem_to_iceberg_unit.py  test_filesystem_to_warehouse_unit.py  test_ftp_filesystem_unit.py  test_google_drive_filesystem_unit.py  test_http_to_filesystem_unit.py  test_local_filesystem.py  test_mock_filesystem.py  test_sharepoint_filesystem_unit.py  test_types.py  test_warehouse_dialects_unit.py
tests/unit/notifications/: test_context.py  test_notifications_api.py
tests/unit/notifications/channels/: test_discord.py  test_email.py  test_slack.py  test_teams.py
tests/unit/notifications/slack/: test_slack_notification.py
