[project]
name = "airflow-toolkit"
version = "0.13.3"
description = ""
authors = [{ name = "Biel Llobera", email = "biel_llobera@dkl.digital" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = [
    "boto3>=1.34.8,<2",
    "databricks-sdk>=0.21.0,<0.22",
    "databricks-sql-connector>=2",
    "deltalake>=0.17.4,<0.18",
    "flask-session==0.5.0",
    "jmespath>=1.0.1,<2",
    "pandas>=2.1.1,<3",
    "pendulum>=2.1.2,<3",
    "paramiko<4.0.0",
    "ipykernel>=6.30.1",
    "flask_limiter>=3.0,<4,!=3.13",
    "virtualenv>=20.35.3",
    "toml>=0.10.2,<0.11",


    "apache-airflow-providers-google>=10.23,<11",
    "apache-airflow-providers-microsoft-azure>=8,<9",
    "apache-airflow-providers-sftp>=4,<5",
    "apache-airflow-providers-slack>=8,<9",
    "apache-airflow-providers-http>=4,<5",
    "airflow-provider-duckdb>=0.2,<0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.entry-points.apache_airflow_provider]
provider_info = "airflow_toolkit.providers.package:get_provider_info"

[project.optional-dependencies]
airflow2 = [
    "apache-airflow>=2.8.0,<3",
    "apache-airflow-providers-amazon>=9,<10",
    "sqlalchemy==1.4.54",
]
airflow3 = [
  "apache-airflow>=3,<4",
  "apache-airflow-providers-amazon>=9.15.0,<10",
  "sqlalchemy>=1.4.49,<2",
]

[dependency-groups]
dev = [
    "black>=23.10.0,<24",
    "ruff>=0.6,<1",
    "isort>=5.12.0,<6",
    "mypy>=1.8.0,<2",
    "ipdb>=0.13.13,<0.14",
    "toml>=0.10.2",
    "pre-commit>=4.3.0",
    "types-requests>=2.31.0.6",
    "types-jmespath>=1.0.2.7,<2",
    "types-toml>=0.10.8.7,<0.11",
]
test = [
    "pytest>=7.4.2,<8",
    "pytest-cov>=4.1.0,<5",
    "werkzeug<3.0.0",
    "connexion>=2.14.2,<3",
    "boto3>=1.28.67,<2",
    "pytest-mock>=3.12.0,<4",
    "requests-mock>=1.12.1,<2",
]

[tool.uv]
conflicts = [
  [{ extra = "airflow2" }, { extra = "airflow3" }],
]

default-groups = [
    "dev",
    "test",
]

[tool.hatch.build.targets.sdist]
include = ["src/airflow_toolkit"]

[tool.hatch.build.targets.wheel]
include = ["src/airflow_toolkit"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
skip-string-normalization = true

[tool.mypy]
python_version = "3.11"
exclude = "^build/"
allow_redefinition = true
ignore_missing_imports = true
disallow_subclassing_any = false
