[project]
name = "airflow-toolkit"
version = "2.4.0"
description = "A toolkit of operators, hooks and utilities for Apache Airflow 3"
authors = [{ name = "Biel Llobera", email = "biel_llobera@dkl.digital" }]
requires-python = ">=3.11,<3.15"
readme = "README.md"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["src"]

[project.entry-points.apache_airflow_provider]
provider_info = "airflow_toolkit.providers.package:get_provider_info"

[project.optional-dependencies]
airflow3 = [
    "apache-airflow>=3,<4",
    "apache-airflow-providers-fab>=3.0.0",
    "pendulum>=3,<4",
]
databricks = [
    "databricks-sdk>=0.21.0,<1",
    "databricks-sql-connector>=2,<5",
    "deltalake>=0.17.4,<2",
    "pandas>=2.1.1,<3",
]
amazon = [
    "apache-airflow-providers-amazon>=9.15.0",
]
google = [
    "apache-airflow-providers-google>=18",
]
azure = [
    "apache-airflow-providers-microsoft-azure>=8",
]
sftp = [
    "apache-airflow-providers-sftp>=5.3",
]
http = [
    "apache-airflow-providers-http>=5.6.4",
    "requests>=2.31.0",
    "jmespath>=1.0.1,<2",
    "pandas>=2.1.1,<3",
]
duckdb = [
    "airflow-provider-duckdb>=0.1.2",
]
sqlite = [
    "apache-airflow-providers-sqlite",
]
excel = [
    "openpyxl>=3.1",
]
avro = [
    "fastavro>=1.9",
]
airflow3-full = [
    "apache-airflow>=3,<4",
    "apache-airflow-providers-fab>=3.0.0",
    "pendulum>=3,<4",
    "databricks-sdk>=0.21.0,<1",
    "databricks-sql-connector>=2,<5",
    "deltalake>=0.17.4,<2",
    "pandas>=2.1.1,<3",
    "apache-airflow-providers-amazon>=9.15.0",
    "apache-airflow-providers-google>=18",
    "apache-airflow-providers-microsoft-azure>=8",
    "apache-airflow-providers-sftp>=5.3",
    "apache-airflow-providers-http>=5.6.4",
    "requests>=2.31.0",
    "jmespath>=1.0.1,<2",
    "airflow-provider-duckdb>=0.1.2",
    "apache-airflow-providers-sqlite",
    "openpyxl>=3.1",
    "fastavro>=1.9",
]

[dependency-groups]
dev = [
    "black>=25.0",
    "ruff>=0.6,<1",
    "isort>=5.12.0,<6",
    "mypy>=1.8.0,<2",
    "ipdb>=0.13.13,<0.14",
    "toml>=0.10.2",
    "pre-commit>=4.3.0",
    "types-requests>=2.31.0.6",
    "types-jmespath>=1.0.2.7,<2",
    "types-toml>=0.10.8.7,<0.11",
]
test = [
    "pytest>=7.4.2,<8",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.12.0,<4",
    "requests-mock>=1.12.1,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.hatch.build.targets.sdist]
include = ["src/airflow_toolkit"]

[tool.hatch.build.targets.wheel]
include = ["src/airflow_toolkit"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.black]
skip-string-normalization = true

[tool.mypy]
python_version = "3.11"
exclude = "^build/"
allow_redefinition = true
ignore_missing_imports = true
disallow_subclassing_any = false
